--- a/package.json
+++ b/package.json
@@ -1,36 +1,42 @@
 {
-    "name" : "docme",
-    "version" : "0.0.0",
-    "description" : "Generates github compatible API documentation from your project's jsdocs and adds them to your Readme.",
-    "main" : "index.js",
-    "scripts" : {
-      "test-main" :  "tap test/*.js",
-      "test-0.8"  :  "nave use 0.8 npm run test-main",
-      "test-0.10" :  "nave use 0.10 npm run test-main",
-      "test-all": "npm run test-main && npm run test-0.8 && npm run test-0.10",
-      "test"      :  "if [ -e $TRAVIS ]; then npm run test-all; else npm run test-main; fi"
-    },
-    "repository" : {
-      "type" : "git",
-      "url" : "git://github.com/thlorenz/docme.git"
-    },
-    "homepage" : "https://github.com/thlorenz/docme",
-    "dependencies" : {
-    },
-    "devDependencies" : {
-      "nave": "~0.4.3",
-      "tape": "~1.0.4",
-      "tap": "~0.4.3"
-    },
-    "keywords": [] ,
-    "author" : {
-      "name" : "Thorsten Lorenz",
-      "email" : "thlorenz@gmx.de",
-      "url" : "http://thlorenz.com"
-    },
-    "license" : {
-      "type": "MIT",
-      "url": "https://github.com/thlorenz/docme/blob/master/LICENSE"
-    },
-    "engine" : { "node" : ">=0.6" }
+  "name": "docme",
+  "version": "0.0.0",
+  "description": "Generates github compatible API documentation from your project's jsdocs and adds them to your Readme.",
+  "main": "index.js",
+  "scripts": {
+    "test-main": "tap test/*.js",
+    "test-0.8": "nave use 0.8 npm run test-main",
+    "test-0.10": "nave use 0.10 npm run test-main",
+    "test-all": "npm run test-main && npm run test-0.8 && npm run test-0.10",
+    "test": "if [ -e $TRAVIS ]; then npm run test-all; else npm run test-main; fi"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/thlorenz/docme.git"
+  },
+  "homepage": "https://github.com/thlorenz/docme",
+  "dependencies": {
+    "jsdoc-githubify": "~0.1.2",
+    "npmlog": "0.0.6",
+    "jsdoc": "~3.3.0-alpha2",
+    "mutiny": "~0.2.0",
+    "through2": "~0.2.3"
+  },
+  "devDependencies": {
+    "nave": "~0.4.3",
+    "tap": "~0.4.3"
+  },
+  "keywords": [],
+  "author": {
+    "name": "Thorsten Lorenz",
+    "email": "thlorenz@gmx.de",
+    "url": "http://thlorenz.com"
+  },
+  "license": {
+    "type": "MIT",
+    "url": "https://github.com/thlorenz/docme/blob/master/LICENSE"
+  },
+  "engine": {
+    "node": ">=0.6"
+  }
 }
