upgrading mutiny and spitting out concatentated api docs, need to remove h1-h3 elements

--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "jsdoc-githubify": "~0.1.2",
     "npmlog": "0.0.6",
     "jsdoc": "~3.3.0-alpha2",
-    "mutiny": "~0.2.0",
     "through2": "~0.2.3",
     "runnel": "~0.5.1",
-    "rimraf": "~2.2.5"
+    "rimraf": "~2.2.5",
+    "mutiny": "~0.3.0"
   },
   "devDependencies": {
     "nave": "~0.4.3",
