--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "prune-html": "~0.1.0",
     "transformify": "~0.1.0",
     "update-section": "~0.1.1",
-    "minimist": "0.0.5"
+    "minimist": "0.0.5",
+    "readable-stream": "~1.1.9"
   },
   "devDependencies": {
     "nave": "~0.4.3",
